# Hands-on-mlir

./: CMakeLists.txt
test-toy/tools/toy-opt/: CMakeLists.txt  toy-opt.cpp
